--- a/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/index.html
+++ b/CcsSportScheduler/CcsSportScheduler_API/ClientApp/public/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <base href="%PUBLIC_URL%/" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/logo.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/assets/logo.png">
     <title>TK Sirmium</title>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
@@ -20,7 +19,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('%PUBLIC_URL%/service-worker.js').then((registration) => {
+                navigator.serviceWorker.register('/service-worker.js').then((registration) => {
                     console.log('ServiceWorker registration successful with scope: ', registration.scope);
                 }, (error) => {
                     console.log('ServiceWorker registration failed: ', error);
